Fix: Text overflow issue of search at topbar (#35)

--- a/src/assets/layout/styles/layout/topbar/_topbar_main.scss
+++ b/src/assets/layout/styles/layout/topbar/_topbar_main.scss
@@ -149,6 +149,7 @@
                            
                             input {
                                 padding: .65rem 1rem;
+                                padding-right: 2.5rem;
                                 color: var(--topbar-item-text-color);
                                 background-color: rgba(255, 255, 255, 0.2);
                                 border: 1px solid var(--topbar-item-text-color);
